--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
     "@mui/joy": "^5.0.0-alpha.43",
     "@mui/material": "^5.10.3",
+    "@nejcm/react-skeleton-emotion": "^3.0.6",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.8",
     "sass": "^1.54.6"
