--- a/package.json
+++ b/package.json
@@ -15,15 +15,26 @@
     "@mui/joy": "^5.0.0-alpha.43",
     "@mui/material": "^5.10.3",
     "@nejcm/react-skeleton-emotion": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mysql2": "^2.3.3",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "next-connect": "^0.13.0",
+    "nprogress": "^0.2.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "postcss-preset-env": "^7.8.0",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.8",
-    "sass": "^1.54.6"
+    "sass": "^1.54.6",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "eslint": "8.23.0",
