--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-alpha.43",
     "@mui/material": "^5.10.3",
     "@nejcm/react-skeleton-emotion": "^3.0.6",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
