--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nejcm/react-skeleton-emotion": "^3.0.6",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.2",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
