--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "next-connect": "^0.13.0",
+    "nodemailer": "^6.7.8",
     "nprogress": "^0.2.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
