event cancel email

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,22 @@
-NEXT_APP_GOOGLE_CLIENT_ID=
-NEXT_APP_GOOGLE_CLIENT_SECRET=
-NEXT_APP_FACEBOOK_CLIENT_ID=
-NEXT_APP_FACEBOOK_CLIENT_SECRET=
-NEXT_APP_SECRET_TOKEN=
-NEXTAUTH_URL=http://localhost:3000/
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=
+NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=
+NEXT_PUBLIC_FACEBOOK_CLIENT_ID=
+NEXT_PUBLIC_FACEBOOK_CLIENT_SECRET=
+NEXT_PUBLIC_SECRET_TOKEN=
+NEXTAUTH_URL=
+NEXT_PUBLIC_API_BASE_URL=
+NEXT_PUBLIC_AUTHORIZATION_URL=
+
+NEXT_PUBLIC_EMAIL_SERVER_USER=
+NEXT_PUBLIC_EMAIL_SERVER_PASSWORD=
+NEXT_PUBLIC_EMAIL_SERVER_HOST=
+NEXT_PUBLIC_EMAIL_SERVER_PORT=
+NEXT_PUBLIC_EMAIL_FROM=
+
+NEXT_PUBLIC_DB_HOST=
+NEXT_PUBLIC_DB_USER=
+NEXT_PUBLIC_DB_PASS=
+NEXT_PUBLIC_DB_NAME=
+NEXT_PUBLIC_JWT_KEY=
+NEXT_PUBLIC_DB_PORT=
+NEXT_PUBLIC_DIALECT=
