--- a/.example.env
+++ b/.example.env
@@ -13,5 +13,5 @@ NEXT_PUBLIC_DB_NAME=
 NEXT_PUBLIC_JWT_KEY=
 NEXT_PUBLIC_DB_PORT=
 NEXT_PUBLIC_DIALECT=
-NEXT_APP_GMAIL_USERNAME=
-NEXT_APP_GMAIL_PASSWORD=
+NEXT_APP_GMAIL_EMAIL=
+NEXT_APP_GMAIL_APP_PASSWORD=
